--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,111 @@
     <title>ToDo</title>
 </head>
 <body>
-   
+   <div class="header">
+    <div class="left">
+        <img src="./images/list.svg" alt="a list" id="menu">
+        <img src="./images/home.svg" alt="home">
+    </div>
+    <div class="add">
+        <img src="./images/plus.svg" alt="plus" id="add">
+        <dialog id="add-task">
+            <form method="dialog" class="task-form" >
+                <div class="form-header">
+                    <div class="heading">NEW TASK</div>
+                    <div class="close">X</div>
+                </div>
+               <div class="form-main">
+                    <div class="column">
+                    <div class='form-row'>
+                        <label for='title'>Title:</label>
+                        <input id='title' name='title' type='text' formnovalidate/>
+                    </div>
+                    <div class='form-row'>
+                        <label for='description'>Description:</label>
+                        <textarea id='description' name='description'></textarea>
+                    </div>  
+                    </div> 
+                    <div class="column">               
+                    <div class='form-row'>
+                        <label for='dueDate'>Due Date:</label>
+                        <input id='dueDate' name='dueDate' type='date' formnovalidate/>
+                    </div>
+                    <div class='form-row'>
+                        <label for='priority'>Priority:</label>
+                        <select id='priority' name='priority'>
+                        <option value='low'>Low</option>
+                        <option value='high'>High</option>
+                        <option value='urgent'>Urgent</option>
+                        </select>
+                    </div>                  
+                    <div class='form-row'>
+                        <label for='projects'>Project:</label>
+                        <select id='projects' name='projects'>
+                        </select>
+                    </div>  
+                    </div>                 
+               </div>
+               <div class="form-footer">
+                    <div class='form-row'>
+                        <button class="task-button" type="submit">Add Task</button>
+                    </div>
+                    <div class='form-row' >
+                        <button class="cancel" formmethod="dialog" >Close</button>
+                    </div>                                    
+                </div>
+            </form>
+        </dialog>
+    </div>
+   </div>
+   <div class="main">
+    <div class="sidebar">
+        <div class="menu-item">
+            <div class="icon"><img src="./images/inbox.svg" alt=""></div>
+            <div class="title" id="inbox">Inbox</div>
+        </div>
+        <div class="menu-item">
+            <div class="icon"><img src="./images/today.svg" alt=""></div>
+            <div class="title" id="today">Today</div>
+        </div>
+        <div class="menu-item">
+            <div class="icon"><img src="./images/calender.svg" alt=""></div>
+            <div class="title" id="projects">Projects
+            </div>
+        </div>
+        <div class="project-display">
+        </div>
+        <div class="add-project">
+            <div class="symbol">+</div>
+            <div class="text">New Project</div>
+        </div>
+        <dialog id="add-project">
+            <form method="dialog" class="task-form">
+                <div class="form-header">
+                    <div class="heading">NEW PROJECT</div>
+                    <div class="close">X</div>
+                </div>
+               <div class="form-main">
+                    <div class="column">
+                    <div class='form-row'>
+                        <label for='title'>Title:</label>
+                        <input id='title' name='title' type='text'/>
+                    </div> 
+                    </div> 
+                    </div>                 
+               <div class="form-footer">
+                    <div class='form-row'>
+                        <button class="project-button">Add Project</button>
+                    </div>                                   
+                </div>
+            </form>
+        </dialog>
+    </div>
+    <div class="taskbar">
+        <div class="project-title">default</div>
+        <div class="task-container">
+                           
+        </div>
+    </div>
+   </div>
 </body>
 </html>
